# CubbyTower

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  codecov.yml  sonar-project.properties
.github/: CODEOWNERS
.github/settings/: typos.toml
.github/workflows/: codeql-analysis.yml  macos.yml  typos.yml  ubuntu-sonarcloud.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
CMake/: CodeCoverage.cmake  CompileOptions.cmake
Extensions/CubbyTowerConsole/: CMakeLists.txt  main.cpp
Includes/CubbyTower/: Game.hpp  Test.hpp
Includes/CubbyTower/Commons/: Constants.hpp  Data.hpp  Enums.hpp  MapData.hpp  Tags.hpp  TowerData.hpp  WaveData.hpp
Includes/CubbyTower/Components/: AttackRange.hpp  Button.hpp  CashButtonToggler.hpp  Clickable.hpp  CollatzDamage.hpp  Color.hpp  Cooldown.hpp  Damage.hpp  DeathTimer.hpp  Destroyable.hpp  Distance.hpp  EndWaveChecker.hpp  EndWaveDelay.hpp  Enemy.hpp  FindTarget.hpp  Gold.hpp  HUD.hpp  Health.hpp  HealthPoint.hpp  Hoverable.hpp  Inputs.hpp  LineRenderer.hpp  Name.hpp  Placer.hpp  PointRenderer.hpp  Position.hpp  PositionAnim.hpp  Resources.hpp  ShapeRenderer.hpp  Size.hpp  SizePulseAnim.hpp  Sound.hpp  Spawner.hpp  Speed.hpp  StaticLinesRenderer.hpp  Target.hpp  TargetMask.hpp  TargetPriority.hpp  TargetScore.hpp  Targeter.hpp  (+10 more)
Includes/CubbyTower/Helpers/: AudioHelpers.hpp  BankHelpers.hpp  BulletHelpers.hpp  GoldHelpers.hpp  InputHelpers.hpp  MonsterHelpers.hpp  ProjectileHelpers.hpp  RenderingHelpers.hpp  ShapeHelpers.hpp  ShootingHelpers.hpp  TowerHelpers.hpp  UIHelpers.hpp  WaveHelpers.hpp
Includes/CubbyTower/Systems/: AttackSystem.hpp  ButtonStateSystem.hpp  CashButtonToggleSystem.hpp  ClickSystem.hpp  CollisionSystem.hpp  CombatSystem.hpp  CooldownSystem.hpp  DeathTimerSystem.hpp  EndWaveCheckSystem.hpp  EndWaveDelaySystem.hpp  Game.hpp  HUDSystem.hpp  HealthBarRenderSystem.hpp  HoverSystem.hpp  InputSystem.hpp  LineRenderSystem.hpp  MonsterTargetScoreSystem.hpp  Path.hpp  PathSystem.hpp  PlaceSystem.hpp  PointRenderSystem.hpp  PositionAnimSystem.hpp  ProjectileSystem.hpp  ShapeRenderSystem.hpp  SizePulseAnimSystem.hpp  SpawnSystem.hpp  StaticLinesRenderSystem.hpp  TargetingSystem.hpp  TextRenderSystem.hpp  TooltipSystem.hpp  TravelSystem.hpp  UpgradeSystem.hpp
Libraries/gl3w/: CMakeLists.txt
Libraries/gl3w/include/GL/: gl3w.hpp  glcorearb.hpp
Libraries/gl3w/src/: gl3w.cpp  glfw_test.cpp  glut_test.cpp
Sources/CubbyTower/: CMakeLists.txt  Game.cpp  Test.cpp  main.cpp
Sources/CubbyTower/Helpers/: AudioHelpers.cpp  BankHelpers.cpp  GoldHelpers.cpp  InputHelpers.cpp  MonsterHelpers.cpp  ProjectileHelpers.cpp  RenderingHelpers.cpp  ShapeHelpers.cpp  ShootingHelpers.cpp  TowerHelpers.cpp  UIHelpers.cpp  WaveHelpers.cpp
Sources/CubbyTower/Systems/: AttackSystem.cpp  ButtonStateSystem.cpp  CashButtonToggleSystem.cpp  ClickSystem.cpp  CollisionSystem.cpp  CooldownSystem.cpp  DeathTimerSystem.cpp  EndWaveCheckSystem.cpp  EndWaveDelaySystem.cpp  Game.cpp  HUDSystem.cpp  HealthBarRenderSystem.cpp  HoverSystem.cpp  InputSystem.cpp  LineRenderSystem.cpp  MonsterTargetScoreSystem.cpp  Path.cpp  PathSystem.cpp  PlaceSystem.cpp  PointRenderSystem.cpp  PositionAnimSystem.cpp  ProjectileSystem.cpp  ShapeRenderSystem.cpp  SizePulseAnimSystem.cpp  SpawnSystem.cpp  StaticLinesRenderSystem.cpp  TargetingSystem.cpp  TextRenderSystem.cpp  TooltipSystem.cpp  TravelSystem.cpp  UpgradeSystem.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp  main.cpp
Tests/UnitTests/Helpers/: BankHelpersTests.cpp  GoldHelpersTests.cpp  MonsterHelpersTests.cpp  TowerHelpersTests.cpp
Tests/UnitTests/Systems/: AttackSystemTests.cpp  GameTests.cpp  PathSystemTests.cpp  PathTests.cpp  ProjectileSystemTests.cpp  UpgradeSystemTests.cpp
